--- a/qosf-simulator-task3_solution.ipynb
+++ b/qosf-simulator-task3_solution.ipynb
@@ -810,8 +810,8 @@
     "    n = int(log(len(final_state),2)) #total_no_of_qubits\n",
     "    result = {}\n",
     "    bin_format = '{:0'+str(n)+'b}'\n",
-    "    for i in range(1000):\n",
-    "        key = measure_all(final_state)\n",
+    "    for i in range(num_shots):\n",
+    "        key = measure_all(state_vector)\n",
     "        bin_key = bin_format.format(key)\n",
     "        result[bin_key] = result.get(bin_key,0)+1\n",
     "    return result\n",
