--- a/qosf-simulator-task3_solution.ipynb
+++ b/qosf-simulator-task3_solution.ipynb
@@ -680,8 +680,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Solution"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,8 +817,8 @@
     "    n = int(log(len(final_state),2)) #total_no_of_qubits\n",
     "    result = {}\n",
     "    bin_format = '{:0'+str(n)+'b}'\n",
-    "    for i in range(1000):\n",
-    "        key = measure_all(final_state)\n",
+    "    for i in range(num_shots):\n",
+    "        key = measure_all(state_vector)\n",
     "        bin_key = bin_format.format(key)\n",
     "        result[bin_key] = result.get(bin_key,0)+1\n",
     "    return result\n",
@@ -832,14 +839,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'11': 501, '00': 499}\n"
+      "{'00': 497, '11': 503}\n"
      ]
     }
    ],
